# kronos

./: .gitignore  2026-04-17_FINAL_REPORT_V3.md  2026-04-17_RESEARCH_SUMMARY.md  2026-04-17_SYSTEM_V2_FINAL.md  2026-04-17_V3_FINAL.md  2026-04-17_final_report.md  ALGORITHM_EFFICIENCY_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATA_ASSESSMENT.md  Dockerfile  FINAL_STRATEGY.json  FUTURES_RESEARCH.md  KRONOS_FRAMEWORK.md  KRONOS_LOGGING_REPORT.md  KRONOS_V3.md  MARKET_REGIME_CLASSIFIER_DESIGN.md  MEMORY.md  Makefile  README.md  RESUME_STATE.md  Round1_Analysis.md  SOUL.md  STRATEGY_ROADMAP_v2.md  TRADING_POOL.md  VALIDATION_REPORT.md  _check_positions.py  arbitrage_scanner.py  audit_l1_l2_l3_results.md  audit_log.jsonl  autonomous_trading_system.py  avax_breakout_compare.py  avax_kronos_compare.py  backtest_engine.py  backtest_hyper.py  backtest_hyper_oversold.py  backtest_multi_direction.py  (+178 more)
archive/: btc_weekly_signal.py  okx_api_retry.py  okx_connector.py  okx_reconciliation_data.py  okx_ws_client.py
backtest/: __init__.py  engine.py  vectorized_engine.py
connectors/: __init__.py  okx_rest.py
core/: __init__.py  cache.py  config.py  engine.py  exceptions.py  feature_importance.py  gemma4_parser.py  gemma4_signal_validator.py  indicators.py  llm_cache.py  logging_config.py  metrics.py  portfolio_risk.py  shadow_validator.py  strategy.py  strategy_version_control.py
data/: atr_watchlist.py  atr_watchlist_state.json  evolution_engine.py  evolution_state.json  trade_journal.jsonl
docs/: backtest_results.md  deployment.md  (+9 more)
(+85 files in other folders)
